fix icons and alignment of welcome message

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2032,6 +2032,13 @@ model-viewer {
   }
 }
 
+@media screen and (max-width: 667px) {
+  .contact-us-welcome {
+    font-weight: 700;
+    font-size: 3vh;
+  }
+}
+
 @media (max-width: 526px) {
   .hr-services:after {
     width: 80%;
